# comfyui-Image-reward

./: README.md  __init__.py  install.bat  pyproject.toml  requirements.txt
ImageReward/: ImageReward.py  __init__.py  utils.py
ImageReward/models/BLIP/: blip.py  blip_pretrain.py
example/: image-reward-workflow.json
nodes/: Score.py
