[project]
name = "comfyui-image-reward"
description = "[a/ImageReward](https://github.com/THUDM/ImageReward): Human preference learning in text-to-image generation. This is a [a/paper](https://arxiv.org/abs/2304.05977) from NeurIPS 2023"
version = "1.0.0"
license = "LICENSE"
dependencies = ["openai-clip", "timm==0.6.13", "fairscale==0.4.13"]

[project.urls]
Repository = "https://github.com/shadowcz007/comfyui-Image-reward"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-Image-reward"
Icon = ""
